[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/default_medium.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/icons/ic_door.png" type="Texture" id=2]
[ext_resource path="res://entities/coding/ItemListElement.gd" type="Script" id=3]
[ext_resource path="res://assets/icons/ic_menu.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/ic_lock.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/error.png" type="Texture" id=6]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform vec4 color : hint_color;

void fragment(){
	vec4 col = texture(TEXTURE, UV);
	COLOR = vec4(color.r, color.g, color.b, col.a);
}"

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = SubResource( 2 )
shader_param/color = Color( 1, 1, 1, 1 )

[node name="ItemUI" type="ColorRect"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 49 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
color = Color( 1, 1, 1, 0 )
script = ExtResource( 3 )
text_color = Color( 1, 1, 1, 1 )
highlight_color = Color( 0.415686, 0.615686, 0.921569, 1 )
hover_color = Color( 1, 1, 1, 0.2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 49.0
mouse_filter = 1
size_flags_horizontal = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1912.0
margin_bottom = 41.0
size_flags_horizontal = 3
custom_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
material = SubResource( 1 )
margin_right = 33.0
margin_bottom = 33.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 49.0
margin_top = 1.0
margin_right = 1760.0
margin_bottom = 32.0
mouse_filter = 1
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Door"

[node name="Error" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 1776.0
margin_right = 1808.0
margin_bottom = 33.0
texture = ExtResource( 6 )

[node name="Lock" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 1824.0
margin_right = 1856.0
margin_bottom = 33.0
texture = ExtResource( 5 )

[node name="MenuButton" type="TextureButton" parent="MarginContainer/HBoxContainer"]
margin_left = 1872.0
margin_right = 1904.0
margin_bottom = 33.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )

[node name="ItemOptions" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0
items = [ "Copy reference", null, 0, false, false, 0, 0, null, "", false, "Rename", null, 0, false, false, 1, 0, null, "", false, "Delete", null, 0, false, false, 2, 0, null, "", false ]

[connection signal="gui_input" from="." to="." method="_on_ItemListElement_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_ItemListElement_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ItemListElement_mouse_exited"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="id_pressed" from="ItemOptions" to="." method="_on_ItemOptions_id_pressed"]
